gitlab/gitlab-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-service
spec:
  selector:
    app: gitlab
  ports:
  - port: 8081
    targetPort: web
    name: http
